<resources>
    <string name="app_name">Coursework</string>
    <string name="subjects">Subjects</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_subject">Add Subject</string>
    <string name="modify_subject">Modify Subject</string>
    <string name="record">Record</string>
    <string name="dashboard">Dashboard</string>
    <string name="subject_title">Subject Title</string>
    <string name="weight">Weight</string>
    <string name="suggested_effort">Suggested Effort</string>
    <string name="in_hours">In hours</string>
    <string name="start_date">Start Date</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="end_date">End Date</string>
    <string name="subject">Subject</string>
    <string name="bin">Bin</string>
    <string name="no_data_available">No Data Available</string>
    <string name="subject_overview">Subject Overview</string>
    <string name="total_hours">Total hours</string>
    <string name="test">Test</string>
    <string name="add_entry">Add Entry</string>
    <string name="delete">Delete</string>
    <string name="hours_dedicated">Hours Dedicated</string>
    <string name="recording_started">Recording Started</string>
    <string name="set_date">Set Date</string>
    <string name="deletion_title">Do you want to delete the following?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add_starting_day_in_calendar">Add starting day in Calendar</string>
    <string name="add_ending_day_in_calendar">Add ending Day in Calendar</string>
    <string name="share">Share</string>
    <string name="channel_name">Notification</string>
    <string name="sign_to_back_up">Log in to Back Up</string>
    <string name="starting_guide">Starting Guide</string>
    <string name="login_to_the_back_up">Login to the Back up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset_data">Reset Data</string>
    <string name="log_out">Log Out</string>
</resources>