<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:id="@+id/homeTitle1"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_subject_main_menu"
            android:layout_below="@id/homeTitle1"
            android:text="@string/subjects"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/button_recording_main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_subject_main_menu"
            android:layout_marginTop="53dp"
            android:text="@string/record"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_dashboard_main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_recording_main_menu"
            android:layout_marginTop="53dp"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textSize="25sp" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:menu="@menu/nav_menu_1" />


</androidx.constraintlayout.widget.ConstraintLayout>