<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.courseworklive.activities.Recording">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleRecording"
        android:text="@string/subject"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleRecording"
        android:id="@+id/recordingStarted"
        android:text="@string/recording_started"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startingTimeRecording"
        android:layout_below="@id/recordingStarted"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Time is"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButtonRecording"
        android:background="@drawable/ic_ellipse"
        android:src="@drawable/ic_save"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/add_subject"/>

</RelativeLayout>