<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.courseworklive.activities.Dashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboard_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDateDashboard"
            android:text="@string/date_format"
            android:layout_below="@id/dashboard_title"
            android:layout_marginTop="20dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboard_title"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="to"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateDashboard"
            android:text="@string/date_format"
            android:layout_below="@id/dashboard_title"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_below="@id/startDateDashboard"
            android:layout_centerHorizontal="true"
            android:id="@+id/searchButtonDateDashboard"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listviewSubjectsDashboard"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/empty_view_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_data_available" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:menu="@menu/nav_menu_1" />


</androidx.constraintlayout.widget.ConstraintLayout>